# opengl-superbible

./: .gitignore  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: application.h
src/: application.h  main.cpp
